# rnaseqmut-py

./: .gitignore  README.md  requirements.txt
.github/workflows/: pypi-publish.yml  python-package.yml  testpypi-publish.yml
demo/: rundemo.py
demo/data/: NORMAL1.bam.vcf  NORMAL2.bam.vcf  TUMOR1.bam.vcf  TUMOR2.bam.vcf
demo/results/: ALLMUT.txt  ALLMUTLIST.txt  ALLMUT_FILTERED.vcf  NORMAL1.bam.1st.txt  NORMAL1.bam.2nd.txt  NORMAL2.bam.1st.txt  NORMAL2.bam.2nd.txt  TUMOR1.bam.1st.txt  TUMOR1.bam.2nd.txt  TUMOR2.bam.1st.txt  TUMOR2.bam.2nd.txt
python/: PYPI_PUBLISHING.md  README.md  README_PYPI.md  pyproject.toml
python/rnaseqmut_py/: caller.py  cli.py  io.py  models.py
python/scripts/: run_demo_smoke.py
