[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnaseqmut-py"
version = "0.1.0"
description = "Python-only mutation caller workflow for RNA-Seq BAM files"
readme = "README_PYPI.md"
requires-python = ">=3.7"
authors = [{name = "Wei Li"}]
license = {text = "MIT"}
dependencies = ["pysam>=0.23"]
keywords = ["rna-seq", "variant-calling", "bam", "bioinformatics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://github.com/davidliwei/rnaseqmut-py"
Repository = "https://github.com/davidliwei/rnaseqmut-py"

[project.scripts]
rnaseqmut = "rnaseqmut_py.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["rnaseqmut_py*"]
